--- a/html/10.cas/index.html
+++ b/html/10.cas/index.html
@@ -5,6 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet" -->
+    <script
+      src="https://kit.fontawesome.com/fc76eeb4d9.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <h1>Naslov</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+        facilis magnam iusto ipsam fuga, libero quae. Culpa, quos, explicabo
+        perferendis dolores eius, quod earum totam quis sed sequi deserunt
+        tenetur asperiores excepturi impedit! Temporibus, accusamus. Libero sit
+        aspernatur aperiam vitae, at rerum porro, explicabo maxime natus totam
+        magnam ea veritatis.
+      </p>
+      <i class="fa-solid fa-music"></i>
+    </div>
+  </body>
 </html>
