--- a/html/Domaci zadatak/facebook.html
+++ b/html/Domaci zadatak/facebook.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./facebook.css" />
   </head>
   <body>
+    <header class="header">
+      <form action="">
+        <button class="register" type="submit">REGISTRUJ SE</button>
+      </form>
+      <a class="aboutUs" href="">O nama</a>
+      <h1 class="facebook">facebook</h1>
+    </header>
     <div class="main">
       <h1>facebook</h1>
       <p>
@@ -36,6 +43,41 @@
           <button class="novi" type="submit">Napravite novi nalog</button>
         </div>
       </form>
+    </div>
+    <div class="text">
+      <p class="lorem">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        possimus qui repudiandae tempore incidunt fugiat aliquid eveniet
+        nesciunt voluptatibus voluptas nemo, porro debitis ducimus veniam rem.
+        Beatae nesciunt illo nulla at ex asperiores esse, quos quo ullam vitae
+        tempore ut quod neque aliquam magnam, tempora repellat! Ab praesentium
+        est quam vero laborum, repudiandae omnis et aliquam reprehenderit, quae
+        itaque earum! Voluptatum, explicabo doloremque? Provident velit debitis
+        perferendis tempora veniam hic, ex labore ducimus autem, eligendi
+        praesentium iusto, vel molestiae! Unde, odit dolore neque quibusdam
+        velit atque enim sunt voluptatibus corporis, deleniti quasi, doloremque
+        error harum vitae fuga accusantium! Libero molestiae id ex minima illo
+        cupiditate, reiciendis illum molestias beatae atque fuga. Illum quos
+        atque mollitia earum, molestiae omnis est. Architecto totam laudantium
+        esse non error veritatis autem provident, eius asperiores doloremque
+        ratione earum nemo aliquid facilis minima sed dignissimos repellendus
+        optio, culpa ipsa vitae aut, quisquam dolorem? At explicabo quasi error
+        rerum alias in obcaecati vero sint dolore expedita nulla saepe id, vitae
+        maxime eligendi nobis, iste ex, assumenda velit nesciunt ad reiciendis
+        architecto debitis. Error quod laborum ab illum iure quas quos totam
+        incidunt a similique, sit minus architecto sed magnam excepturi ea eius
+        hic cumque aut porro ducimus. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Saepe asperiores ipsum hic eveniet vitae corporis,
+        quam dolore voluptate, officia, molestias harum dicta. Impedit cum eos
+        beatae illum, asperiores, quidem porro facilis id error dolorum natus
+        doloribus hic explicabo excepturi corrupti consectetur minima fugit
+        optio. Esse cumque ipsum nulla omnis, sint, quaerat perspiciatis
+        possimus vel magni quae ducimus, illo voluptatum dolore enim hic quo
+        praesentium? Et, fugiat praesentium. Sint libero in quibusdam facere aut
+        debitis, dolores quae hic aperiam laborum vero adipisci sit? Quos
+        architecto accusantium atque eum! Magnam et deleniti esse, maxime
+        exercitationem obcaecati veniam laudantium quis? Error, magnam corrupti!
+      </p>
     </div>
   </body>
 </html>
