--- a/html/Domaci zadatak/udemy.html
+++ b/html/Domaci zadatak/udemy.html
@@ -14,45 +14,66 @@
     <header class="header1">
       <a href=""><img class="logo" src="./udemy.png" alt="" /></a>
       <a class="link1" href="">Categories</a>
-      <div class="searchBar">
-        <input type="text" placeholder="Search for anything" />
-        <a href="./kartica.html"
-          ><i class="fa-solid fa-magnifying-glass search"></i
-        ></a>
-      </div>
 
-      <div class="desno">
-        <a class="link2" href="">Udemy Business</a>
-        <a class="link3" href="">Teach on Udemy</a>
-        <a class="link4" href="">My learning</a>
-      </div>
+      <input class="search" type="text" placeholder="Search for anything" />
+      <!-- <a href="./kartica.html"><i class="fa-solid fa-magnifying-glass"></i></a> -->
 
-      <div class="icons">
-        <a href=""> <i class="fa-regular fa-heart"></i></a>
-        <a href=""> <i class="fa-regular fa-bell"></i></a>
+      <a href=""> <i class="fa-regular fa-heart icons"></i></a>
+      <a href=""> <i class="fa-regular fa-bell icons"></i></a>
 
-        <a href="./mastercard.html"> <i class="fa-solid fa-shop"></i></a>
-        <a href=""> <i class="fa-solid fa-circle-user"></i> </a>
-      </div>
+      <a href="./mastercard.html"> <i class="fa-solid fa-shop icons"></i></a>
+      <a href=""> <i class="fa-solid fa-circle-user icons"></i> </a>
+
+      <a class="link" href="">Udemy Business</a>
+      <a class="link" href="">Teach on Udemy</a>
+      <a class="link" href="">My learning</a>
     </header>
     <header class="header2">
-      <a class="link5" href="">Development</a>
-      <a class="link6" href="">Business</a>
-      <a class="link7" href="">Finance & Accounting</a>
-      <a class="link8" href="">IT & Software</a>
-      <a class="link9" href="">Office Productivity</a>
-      <a class="link10" href="">Personal Development</a>
-      <a class="link11" href="">Design</a>
-      <a class="link12" href="">Marketing</a>
-      <a class="link13" href="">Health & Fitness</a>
-      <a class="link14" href="">Music</a>
+      <div class="links">
+        <a class="link" href="">Development</a>
+        <a class="link" href="">Business</a>
+        <a class="link" href="">Finance & Accounting</a>
+        <a class="link" href="">IT & Software</a>
+        <a class="link" href="">Office Productivity</a>
+        <a class="link" href="">Personal Development</a>
+        <a class="link" href="">Design</a>
+        <a class="link" href="">Marketing</a>
+        <a class="link" href="">Health & Fitness</a>
+        <a class="link" href="">Music</a>
+      </div>
     </header>
 
     <div class="slika"></div>
     <div class="kartice">
-      <div class="kartica1 kartica"></div>
-      <div class="kartica2 kartica"></div>
-      <div class="kartica3 kartica"></div>
+      <div class="kartica1 kartica">
+        <div class="text">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
+            voluptatum nam autem molestias dolore eius aspernatur architecto
+            fuga
+          </p>
+        </div>
+      </div>
+      <div class="kartica2 kartica">
+        <div class="text">
+          <p></p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
+            voluptatum nam autem molestias dolore eius aspernatur architecto
+            fuga
+          </p>
+        </div>
+      </div>
+      <div class="kartica3 kartica">
+        <div class="text">
+          <p></p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
+            voluptatum nam autem molestias dolore eius aspernatur architecto
+            fuga
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
