--- a/html/Domaci zadatak/udemy-display/udemy2.html
+++ b/html/Domaci zadatak/udemy-display/udemy2.html
@@ -82,7 +82,7 @@
       </div>
       <div class="kartica3 kartica">
         <div class="text">
-          <img src="./3714828.jpg" alt="" />
+          <img src="./3714825.png" alt="" />
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
             voluptatum nam autem molestias dolore eius aspernatur architecto
@@ -93,7 +93,9 @@
     </div>
     <footer>
       <div class="footer1">
-        <div class="lopta1"></div>
+        <div class="wrapper1">
+          <div class="lopta1"></div>
+        </div>
       </div>
       <div class="footer2">
         <div class="lopta2"></div>
