--- a/html/Vezba/vezba1.html
+++ b/html/Vezba/vezba1.html
@@ -15,6 +15,7 @@
       height: 500px;
       background-color: bisque;
       display: flex;
+      gap: 200px;
     }
     .child {
       background-color: brown;
@@ -22,19 +23,31 @@
       height: 100px;
       border: 1px solid black;
     }
-
+    .child2 {
+      background-color: rgb(42, 91, 165);
+      width: 100px;
+      height: 100px;
+      border: 1px solid black;
+    }
+    .first {
+      display: flex;
+    }
     .child:nth-of-type(1) {
-      margin-right: auto;
+      /* margin-right: auto; */
     }
     .child:nth-of-type(4) {
-      margin-left: auto;
+      /* margin-left: auto; */
     }
   </style>
   <body>
     <div class="parent">
       <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
+      <div class="first">
+        <div class="child2"></div>
+
+        <div class="child2"></div>
+      </div>
+
       <div class="child"></div>
     </div>
   </body>
