Sajt-Display Grid

--- a/html/Domaci zadatak/grid/index.html
+++ b/html/Domaci zadatak/grid/index.html
@@ -7,6 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
@@ -17,7 +23,10 @@
     ></script>
   </head>
   <body>
-    <div class="slika"></div>
+    <div class="slika">
+      <h3>7 Ancient Wonders</h3>
+      <h1>PYRAMIDS OF GIZA</h1>
+    </div>
     <header>
       <div class="logo">
         <h1>Logo</h1>
@@ -40,7 +49,7 @@
 
     <main>
       <div class="child">
-        <h1>Naslov o necemu</h1>
+        <h1>I Click Moment, that you love.</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
           dolorem laboriosam id? Ipsam, ipsum sapiente asperiores minima
@@ -55,17 +64,21 @@
           src="./side-view-smiley-woman-posing-outdoors.jpg"
           alt=""
           width="100%"
+          height="100%"
         />
       </div>
       <div class="child">
+        <img class="sign" src="./sign.png" alt="" width="50%" />
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi
           eligendi praesentium explicabo odio, neque quia ipsa illo! Officia
           neque fugiat temporibus libero, velit excepturi eaque itaque quasi?
-          Eveniet ipsam omnis ducimus voluptates reprehenderit exercitationem,
-          quia minima quidem fuga architecto et ipsum consectetur, tempora
-          placeat maiores pariatur rerum vel repellendus natus.
+          Eveniet ipsam omnis ducimus voluptates Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Perspiciatis est at voluptatem eius
+          magni provident ipsum fugiat soluta dolor veritatis!
         </p>
+
+        <button class="dugme" type="submit">MY WORK</button>
       </div>
     </main>
   </body>
