--- a/html/Vezba/gradient.html
+++ b/html/Vezba/gradient.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gradient</title>
+    <title>Gradients</title>
   </head>
   <style>
     .box {
