--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -10,27 +10,102 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/fc76eeb4d9.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="slika"></div>
+    <div class="parallax">
+      <div class="slika"></div>
+      <div class="text">
+        <h1>
+          Powerful Digital <br />
+          Solutions With GP.
+        </h1>
+        <h3>We are team of talented digital marketers</h3>
 
-    <header>
-      <div class="wrapper">
-        <h1>LOGO</h1>
-        <div class="links">
-          <a href="">Home</a>
-          <a href="">About</a>
+        <div class="boxevi">
+          <div class="box">
+            <i class="fa-solid fa-calendar-days"></i>
+            <h3>Schedule</h3>
+          </div>
+          <div class="box">
+            <i class="fa-solid fa-clock"></i>
+            <h3>Saving Time</h3>
+          </div>
 
-          <a href="">Service</a>
-          <a href="">Portfolio</a>
-          <a href="">Team</a>
-          <a href="">Dropdown</a>
-          <a href="">Contact</a>
+          <div class="box">
+            <i class="fa-solid fa-shop"> </i>
+            <h3>Affordable</h3>
+          </div>
+          <div class="box">
+            <i class="fa-solid fa-gift"></i>
+            <h3>Free Gift</h3>
+          </div>
+          <div class="box">
+            <i class="fa-solid fa-money-bill"></i>
+            <h3>Refundable</h3>
+          </div>
         </div>
-
-        <button class="dugme" type="submit">Get Started</button>
       </div>
-    </header>
+
+      <header>
+        <div class="wrapper">
+          <h1>LOGO</h1>
+          <div class="links">
+            <a href="">Home</a>
+            <a href="">About</a>
+
+            <a href="">Service</a>
+            <a href="">Portfolio</a>
+            <a href="">Team</a>
+            <a href="">Dropdown</a>
+            <a href="">Contact</a>
+          </div>
+
+          <button class="dugme" type="submit">Get Started</button>
+        </div>
+      </header>
+      <main>
+        <div class="main1">
+          <div class="levo">
+            <h2>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Dignissimos, incidunt! Veniam commodi enim quos harum minima vitae
+              cum consequatur excepturi!
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+              eius nam dolore illo accusantium assumenda molestiae dicta impedit
+              qui nulla.
+            </p>
+            <ul>
+              <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure,
+                magni.
+              </li>
+              <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+                cum.
+              </li>
+              <li>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Tenetur, adipisci ea eos minima voluptatem quo aspernatur,
+                possimus ab ut quas praesentium, odit laudantium cumque numquam!
+              </li>
+            </ul>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque
+              dicta facilis quam qui illum magnam. Magnam molestiae, molestias
+              eos quidem itaque totam debitis, necessitatibus inventore quisquam
+              unde tempora sit! Explicabo!
+            </p>
+          </div>
+          <div class="desno"></div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
