--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -24,7 +24,9 @@
           Powerful Digital <br />
           Solutions With GP.
         </h1>
-        <h3>We are team of talented digital marketers</h3>
+        <h3 class="h3-sto-ne-slusa">
+          We are team of talented digital marketers
+        </h3>
 
         <div class="boxevi">
           <div class="box">
@@ -76,7 +78,7 @@
               Dignissimos, incidunt! Veniam commodi enim quos harum minima vitae
               cum consequatur excepturi!
             </h2>
-            <p>
+            <p style="font-style: italic">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
               eius nam dolore illo accusantium assumenda molestiae dicta impedit
               qui nulla.
