--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -73,25 +73,24 @@
       <main>
         <div class="main1">
           <div class="levo">
-            <h2>
+            <h2 style="font-size: 1.5em">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Dignissimos, incidunt! Veniam commodi enim quos harum minima vitae
-              cum consequatur excepturi!
+              Dignissimos, incidunt!
             </h2>
             <p style="font-style: italic">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
-              eius nam dolore illo accusantium assumenda molestiae dicta impedit
-              qui nulla.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             </p>
             <ul>
               <li>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure,
                 magni.
               </li>
+
               <li>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
                 cum.
               </li>
+
               <li>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Tenetur, adipisci ea eos minima voluptatem quo aspernatur,
@@ -101,11 +100,51 @@
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque
               dicta facilis quam qui illum magnam. Magnam molestiae, molestias
-              eos quidem itaque totam debitis, necessitatibus inventore quisquam
-              unde tempora sit! Explicabo!
+              eos quidem itaque.
             </p>
           </div>
           <div class="desno"></div>
+        </div>
+
+        <div class="traka"></div>
+
+        <div class="main2">
+          <div class="slicica"></div>
+          <div class="redovi">
+            <div class="div">
+              <i class="fa-solid fa-clock"></i>
+
+              <h3>Always on Time</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam eius, debitis sunt culpa dolorum blanditiis!
+              </p>
+            </div>
+            <div class="div">
+              <i class="fa-solid fa-timeline"></i>
+              <h3>Marketing</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam eius, debitis sunt culpa dolorum blanditiis!
+              </p>
+            </div>
+            <div class="div">
+              <i class="fa-solid fa-video"></i>
+              <h3>Demonstration</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam eius, debitis sunt culpa dolorum blanditiis!
+              </p>
+            </div>
+            <div class="div">
+              <i class="fa-solid fa-shield-halved"></i>
+              <h3>Secured</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam eius, debitis sunt culpa dolorum blanditiis!
+              </p>
+            </div>
+          </div>
         </div>
       </main>
     </div>
