--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -18,6 +18,24 @@
   </head>
   <body>
     <div class="parallax">
+      <header>
+        <div class="wrapper">
+          <h1>LOGO</h1>
+          <div class="links">
+            <a href="">Home</a>
+            <a href="">About</a>
+
+            <a href="">Service</a>
+            <a href="">Portfolio</a>
+            <a href="">Team</a>
+            <a href="">Dropdown</a>
+            <a href="">Contact</a>
+          </div>
+
+          <button class="dugme" type="submit">Get Started</button>
+        </div>
+      </header>
+
       <div class="slika"></div>
       <div class="text">
         <h1>
@@ -53,23 +71,6 @@
         </div>
       </div>
 
-      <header>
-        <div class="wrapper">
-          <h1>LOGO</h1>
-          <div class="links">
-            <a href="">Home</a>
-            <a href="">About</a>
-
-            <a href="">Service</a>
-            <a href="">Portfolio</a>
-            <a href="">Team</a>
-            <a href="">Dropdown</a>
-            <a href="">Contact</a>
-          </div>
-
-          <button class="dugme" type="submit">Get Started</button>
-        </div>
-      </header>
       <main>
         <div class="main1">
           <div class="levo">
@@ -142,6 +143,55 @@
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                 Aperiam eius, debitis sunt culpa dolorum blanditiis!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="main3">
+          <h3>SERVICES</h3>
+          <h1>CHECK OUR SERVICES</h1>
+          <div class="kartice">
+            <div class="kartica">
+              <h3>Digital Transformation</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                veniam nihil? Corrupti in ab id vitae animi eum veritatis sint.
+              </p>
+            </div>
+            <div class="kartica">
+              <h3>Enterprise Business Solutions</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                veniam nihil? Corrupti in ab id vitae animi eum veritatis sint.
+              </p>
+            </div>
+            <div class="kartica">
+              <h3>Mobility</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                veniam nihil? Corrupti in ab id vitae animi eum veritatis sint.
+              </p>
+            </div>
+            <div class="kartica">
+              <h3>Enterprise Application Service</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                veniam nihil? Corrupti in ab id vitae animi eum veritatis sint.
+              </p>
+            </div>
+            <div class="kartica">
+              <h3>UI/UX Design</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                veniam nihil? Corrupti in ab id vitae animi eum veritatis sint.
+              </p>
+            </div>
+            <div class="kartica">
+              <h3>IT Infrastructure</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                veniam nihil? Corrupti in ab id vitae animi eum veritatis sint.
               </p>
             </div>
           </div>
