--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -37,6 +37,7 @@
       </header>
 
       <div class="slika"></div>
+
       <div class="text">
         <h1>
           Powerful Digital <br />
@@ -107,7 +108,15 @@
           <div class="desno"></div>
         </div>
 
-        <div class="traka"></div>
+        <div class="traka">
+          <h1>Learn About Us</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo
+            suscipit molestiae nulla ipsam adipisci, repellendus officia atque
+            ullam quo?
+          </p>
+          <button type="submit">About Us</button>
+        </div>
 
         <div class="main2">
           <div class="slicica"></div>
@@ -149,10 +158,11 @@
         </div>
 
         <div class="main3">
-          <h3>SERVICES</h3>
+          <h3 class="service">SERVICES</h3>
           <h1>CHECK OUR SERVICES</h1>
           <div class="kartice">
             <div class="kartica">
+              <i class="fa-solid fa-circle-user"></i>
               <h3>Digital Transformation</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
@@ -160,6 +170,7 @@
               </p>
             </div>
             <div class="kartica">
+              <i class="fa-solid fa-file"></i>
               <h3>Enterprise Business Solutions</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
@@ -167,6 +178,7 @@
               </p>
             </div>
             <div class="kartica">
+              <i class="fa-solid fa-hand"></i>
               <h3>Mobility</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
@@ -174,6 +186,7 @@
               </p>
             </div>
             <div class="kartica">
+              <i class="fa-brands fa-figma"></i>
               <h3>Enterprise Application Service</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
@@ -181,6 +194,7 @@
               </p>
             </div>
             <div class="kartica">
+              <i class="fa-solid fa-paintbrush"></i>
               <h3>UI/UX Design</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
@@ -188,6 +202,7 @@
               </p>
             </div>
             <div class="kartica">
+              <i class="fa-solid fa-circle-info"></i>
               <h3>IT Infrastructure</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
