--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -74,38 +74,44 @@
 
       <main>
         <div class="main1">
-          <div class="levo">
-            <h2 style="font-size: 1.5em">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Dignissimos, incidunt!
-            </h2>
-            <p style="font-style: italic">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            </p>
-            <ul>
-              <li>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure,
-                magni.
-              </li>
+          <h3 class="about">ABOUT</h3>
+          <h1>SEE ABOUT US</h1>
 
-              <li>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
-                cum.
-              </li>
+          <div class="content">
+            <div class="levo">
+              <h2 style="font-size: 1.5em">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Dignissimos, incidunt!
+              </h2>
+              <p style="font-style: italic">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              </p>
+              <ul>
+                <li>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure,
+                  magni.
+                </li>
 
-              <li>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Tenetur, adipisci ea eos minima voluptatem quo aspernatur,
-                possimus ab ut quas praesentium, odit laudantium cumque numquam!
-              </li>
-            </ul>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque
-              dicta facilis quam qui illum magnam. Magnam molestiae, molestias
-              eos quidem itaque.
-            </p>
+                <li>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Nobis, cum.
+                </li>
+
+                <li>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Tenetur, adipisci ea eos minima voluptatem quo aspernatur,
+                  possimus ab ut quas praesentium, odit laudantium cumque
+                  numquam!
+                </li>
+              </ul>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque
+                dicta facilis quam qui illum magnam. Magnam molestiae, molestias
+                eos quidem itaque.
+              </p>
+            </div>
+            <div class="desno"></div>
           </div>
-          <div class="desno"></div>
         </div>
 
         <div class="traka">
@@ -209,6 +215,22 @@
                 veniam nihil? Corrupti in ab id vitae animi eum veritatis sint.
               </p>
             </div>
+          </div>
+        </div>
+
+        <div class="trakica"></div>
+
+        <div class="main4">
+          <h3>PORTFOLIO</h3>
+          <h1>CHECK OUR PORTFOLIO</h1>
+
+          <div class="galerija">
+            <div class="foto1"></div>
+            <div class="foto2"></div>
+            <div class="foto3"></div>
+            <div class="foto4"></div>
+            <div class="foto5"></div>
+            <div class="foto6"></div>
           </div>
         </div>
       </main>
