--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -75,7 +75,7 @@
       <main>
         <div class="main1">
           <h3 class="about">ABOUT</h3>
-          <h1>SEE ABOUT US</h1>
+          <h1>LEARN ABOUT US</h1>
 
           <div class="content">
             <div class="levo">
@@ -218,19 +218,69 @@
           </div>
         </div>
 
-        <div class="trakica"></div>
+        <div class="trakica">
+          <h1>Call To Action</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo
+            suscipit molestiae nulla ipsam adipisci, repellendus officia atque
+            ullam quo?
+          </p>
+          <button type="submit">Call To Action</button>
+        </div>
 
         <div class="main4">
-          <h3>PORTFOLIO</h3>
+          <h3 class="portfolio">PORTFOLIO</h3>
           <h1>CHECK OUR PORTFOLIO</h1>
 
           <div class="galerija">
-            <div class="foto1"></div>
-            <div class="foto2"></div>
-            <div class="foto3"></div>
-            <div class="foto4"></div>
-            <div class="foto5"></div>
-            <div class="foto6"></div>
+            <div class="foto1">
+              <h3>App 1</h3>
+              <p>APP</p>
+              <div class="ikonice">
+                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-share-nodes"></i>
+              </div>
+            </div>
+            <div class="foto2">
+              <h3>Card 1</h3>
+              <p>CARD</p>
+              <div class="ikonice">
+                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-share-nodes"></i>
+              </div>
+            </div>
+            <div class="foto3">
+              <h3>Web 1</h3>
+              <p>WEB</p>
+              <div class="ikonice">
+                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-share-nodes"></i>
+              </div>
+            </div>
+            <div class="foto4">
+              <h3>Card 2</h3>
+              <p>CARD</p>
+              <div class="ikonice">
+                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-share-nodes"></i>
+              </div>
+            </div>
+            <div class="foto5">
+              <h3>App 2</h3>
+              <p>APP</p>
+              <div class="ikonice">
+                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-share-nodes"></i>
+              </div>
+            </div>
+            <div class="foto6">
+              <h3>Web 2</h3>
+              <p>WEB</p>
+              <div class="ikonice">
+                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-share-nodes"></i>
+              </div>
+            </div>
           </div>
         </div>
       </main>
