--- a/html/Domaci zadatak/grid/index.html
+++ b/html/Domaci zadatak/grid/index.html
@@ -33,8 +33,8 @@
       </div>
       <div class="links">
         <a href="">Home</a>
-        <a href="">Portfolio</a>
-        <a href="">Service</a>
+        <a href="#slideshow">Portfolio</a>
+        <a href="#service">Service</a>
         <a href="">About</a>
         <a href="">Contact</a>
         <a href="">Blog</a>
@@ -48,7 +48,7 @@
     </header>
 
     <main>
-      <div class="child">
+      <div class="child" id="service">
         <h1>I Click Moment, that you love.</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
@@ -78,8 +78,36 @@
           magni provident ipsum fugiat soluta dolor veritatis!
         </p>
 
-        <button class="dugme" type="submit">MY WORK</button>
+        <a href="#slideshow">
+          <button class="dugme" type="submit">MY WORK</button></a
+        >
       </div>
     </main>
+    <div class="galerija" id="slideshow">
+      <div class="foto1">
+        <h3>Nature Love</h3>
+        <h1>PHOTOGRAPHY</h1>
+      </div>
+      <div class="foto2">
+        <h3>Still Life</h3>
+        <h1>PHOTOGRAPHY</h1>
+      </div>
+      <div class="foto3">
+        <h3>Inspirational</h3>
+        <h1>PHOTOGRAPHY</h1>
+      </div>
+      <div class="foto4">
+        <h3>Abstract</h3>
+        <h1>PHOTOGRAPHY</h1>
+      </div>
+      <div class="foto5">
+        <h3>Macro</h3>
+        <h1>PHOTOGRAPHY</h1>
+      </div>
+      <div class="foto6">
+        <h3>Photojournalism</h3>
+        <h1>PHOTOGRAPHY</h1>
+      </div>
+    </div>
   </body>
 </html>
