--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -283,6 +283,54 @@
             </div>
           </div>
         </div>
+
+        <div class="main5">
+          <div class="slika2"></div>
+          <div class="text2">
+            <h1>Our customer feedback is always positive</h1>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
+              saepe, consequuntur, voluptatum nobis architecto ratione itaque
+              autem voluptatibus, dolorem dicta nesciunt placeat eos
+              necessitatibus! Nam iure in consequatur impedit maxime!
+            </p>
+            <div class="cards">
+              <div class="card">
+                <i class="fa-regular fa-face-smile"></i>
+                <h1>65</h1>
+                <p>
+                  <strong> Happy Clients</strong> Lorem ipsum dolor sit amet
+                  consectetur, adipisicing elit. Ipsam, deserunt!
+                </p>
+              </div>
+              <div class="card">
+                <i class="fa-solid fa-list-check"></i>
+                <h1>85</h1>
+                <p>
+                  <strong> Projects</strong> Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit. Impedit, nostrum!
+                </p>
+              </div>
+              <div class="card">
+                <i class="fa-regular fa-clock"></i>
+                <h1>35</h1>
+                <p>
+                  <strong>Years of experience</strong> Lorem ipsum dolor sit
+                  amet consectetur adipisicing elit. Quos doloremque eos animi
+                  voluptatem nam eius.
+                </p>
+              </div>
+              <div class="card">
+                <i class="fa-solid fa-award"></i>
+                <h1>20</h1>
+                <p>
+                  <strong> Awards</strong> Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit. Minus, eveniet.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
   </body>
