--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -331,6 +331,47 @@
             </div>
           </div>
         </div>
+
+        <div class="traka2">
+          <img src="./man.png" alt="" width="150px" />
+          <h3>Saladin Hodzic</h3>
+          <p>Graphic Designer</p>
+
+          <p style="font-style: italic; text-align: center">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto
+            voluptates doloremque praesentium excepturi soluta, sequi repellat
+            eligendi illum nemo magnam dolorum error eaque ullam officia! Quam
+            consequuntur impedit voluptatem? Consectetur.
+          </p>
+        </div>
+
+        <div class="team">
+          <h3>TEAM</h3>
+          <h1>CHECK OUR TEAM</h1>
+
+          <div class="ljudi">
+            <div class="covek1">
+              <img src="" alt="" />
+              <h3>Walter White</h3>
+              <p>Chief Executive Officer</p>
+            </div>
+            <div class="covek2">
+              <img src="" alt="" />
+              <h3>Sarah Johnson</h3>
+              <p>Product Manager</p>
+            </div>
+            <div class="covek3">
+              <img src="" alt="" />
+              <h3>Wilian Anderson</h3>
+              <p>CTO</p>
+            </div>
+            <div class="covek4">
+              <img src="" alt="" />
+              <h3>Amanda Jenson</h3>
+              <p>Accountant</p>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
   </body>
