--- a/html/Domaci zadatak/GP-sajt/index.html
+++ b/html/Domaci zadatak/GP-sajt/index.html
@@ -346,29 +346,61 @@
         </div>
 
         <div class="team">
-          <h3>TEAM</h3>
-          <h1>CHECK OUR TEAM</h1>
+          <div>
+            <h3 class="h3-team">TEAM</h3>
+            <h1>CHECK OUR TEAM</h1>
+          </div>
 
           <div class="ljudi">
             <div class="covek1">
-              <img src="" alt="" />
-              <h3>Walter White</h3>
-              <p>Chief Executive Officer</p>
+              <div class="image">
+                <img
+                  src="./handsome-young-guy-casual-clothing.jpg"
+                  alt=""
+                  width="100%"
+                />
+                <!-- <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-linkedin"></i> -->
+              </div>
+              <div style="padding: 10px">
+                <h3>Walter White</h3>
+                <p>Chief Executive Officer</p>
+              </div>
             </div>
             <div class="covek2">
-              <img src="" alt="" />
-              <h3>Sarah Johnson</h3>
-              <p>Product Manager</p>
+              <img
+                src="./smiling-business-woman-with-folded-hands-toothy-smile-crossed-arms (1).jpg"
+                alt=""
+                width="100%"
+              />
+              <div style="padding: 10px">
+                <h3>Sarah Johnson</h3>
+                <p>Product Manager</p>
+              </div>
             </div>
             <div class="covek3">
-              <img src="" alt="" />
-              <h3>Wilian Anderson</h3>
-              <p>CTO</p>
+              <img
+                src="./smiling-male-entrepreneur-with-beard-mustache-crossing-arms-chest.jpg"
+                alt=""
+                width="100%"
+              />
+              <div style="padding: 10px">
+                <h3>Wiliam Anderson</h3>
+                <p>CTO</p>
+              </div>
             </div>
             <div class="covek4">
-              <img src="" alt="" />
-              <h3>Amanda Jenson</h3>
-              <p>Accountant</p>
+              <img
+                src="./confident-middle-aged-woman-portrait.jpg"
+                alt=""
+                width="100%"
+              />
+              <div style="padding: 10px">
+                <h3>Amanda Jenson</h3>
+                <p>Accountant</p>
+              </div>
             </div>
           </div>
         </div>
